# nss_ndb

./: LICENSE  Makefile  Makefile.in  README  README.md  TODO  config.h.in  configure  configure.ac  makendb.1  makendb.8  makendb.8.in  makendb.c  ndb.h  ndbsync  nss_ndb.8  nss_ndb.8.in  nss_ndb.c  nss_ndb.conf  nss_ndb.conf.5  nss_ndb.conf.5.in  nss_ndb.h  nsstest.8  nsstest.8.in  nsstest.c  t_getgrent.c  t_getgrnam  t_getgrnam.c  t_getgrouplist.c  t_getpwent.c  t_getpwnam.c
ports/: Makefile  Makefile.port  Makefile.port.in  pkg-descr
t/: group.bygid.db  group.byname.db  group.byuser.db
